# hiprof

./: .gitignore  README.md  pyproject.toml
hiprof/: __init__.py  utils.py
hiprof/base/: basetask.py  canonicalform.py  graph.py  id.py  parameter.py  utils.py
hiprof/formula/: __init__.py  __main__.py  formula.py  grammar.lark  parser.py  transformer.py  validation.py  visitors.py
hiprof/verification/: __init__.py  degree.py  falsifier.py  gaussian.py  utils.py
notebooks/: admg.ipynb  demo.ipynb  example_ID.ipynb  frontdoor.ipynb  napkin.ipynb
